src/main/java/es/uniovi/dlp/parser/XanaParser.java
// Generated from java-escape by ANTLR 4.11.1

package es.uniovi.dlp.parser;

import es.uniovi.dlp.ast.*;
import es.uniovi.dlp.ast.definition.*;
import es.uniovi.dlp.ast.expressions.*;
import es.uniovi.dlp.ast.statement.*;
import es.uniovi.dlp.ast.types.*;
import java.util.ArrayList;
import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class XanaParser extends Parser {
  static {
    RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
  public static final int T__0 = 1,
      T__1 = 2,
      T__2 = 3,
      T__3 = 4,
      T__4 = 5,
      T__5 = 6,
      T__6 = 7,
      T__7 = 8,
      T__8 = 9,
      T__9 = 10,
      T__10 = 11,
      T__11 = 12,
      T__12 = 13,
      T__13 = 14,
      T__14 = 15,
      MINUS = 16,
      NOT = 17,
      ABRE_CORCHETE = 18,
      CIERRA_CORCHETE = 19,
      ABRE_PARENTESIS = 20,
      CIERRA_PARENTESIS = 21,
      VOID = 22,
      DOT = 23,
      AS = 24,
      IF = 25,
      ELSE = 26,
      WHILE = 27,
      PUTS = 28,
      IN = 29,
      IGUAL = 30,
      DEF = 31,
      MAIN = 32,
      RETURN = 33,
      DOS_PUNTOS = 34,
      DEFSTRUCT = 35,
      COMMA = 36,
      DO = 37,
      END = 38,
      OMMIT = 39,
      LINE_COMMENT = 40,
      MULTI_LINE_COMMENT = 41,
      INT_CONSTANT = 42,
      REAL_CONSTANT = 43,
      CHAR_CONSTANT = 44,
      ID = 45;
  public static final int RULE_program = 0,
      RULE_main_def = 1,
      RULE_func_def = 2,
      RULE_func_body = 3,
      RULE_return_type = 4,
      RULE_param_list = 5,
      RULE_var_def = 6,
      RULE_var_type_def = 7,
      RULE_simple_type = 8,
      RULE_array_def_type = 9,
      RULE_struct_def_type = 10,
      RULE_statement = 11,
      RULE_func_invocation = 12,
      RULE_argument_list = 13,
      RULE_if_else = 14,
      RULE_while_statement = 15,
      RULE_assignment = 16,
      RULE_puts = 17,
      RULE_in = 18,
      RULE_return_statement = 19,
      RULE_expression = 20,
      RULE_simple_constant = 21;

  private static String[] makeRuleNames() {
    return new String[] {
      "program",
      "main_def",
      "func_def",
      "func_body",
      "return_type",
      "param_list",
      "var_def",
      "var_type_def",
      "simple_type",
      "array_def_type",
      "struct_def_type",
      "statement",
      "func_invocation",
      "argument_list",
      "if_else",
      "while_statement",
      "assignment",
      "puts",
      "in",
      "return_statement",
      "expression",
      "simple_constant"
    };
  }

  public static final String[] ruleNames = makeRuleNames();

  private static String[] makeLiteralNames() {
    return new String[] {
      null,
      "'int'",
      "'double'",
      "'char'",
      "'*'",
      "'/'",
      "'%'",
      "'+'",
      "'>'",
      "'>='",
      "'<'",
      "'<='",
      "'!='",
      "'=='",
      "'&&'",
      "'||'",
      "'-'",
      "'!'",
      "'['",
      "']'",
      "'('",
      "')'",
      "'void'",
      "'.'",
      "'as'",
      "'if'",
      "'else'",
      "'while'",
      "'puts'",
      "'in'",
      "'='",
      "'def'",
      "'main'",
      "'return'",
      "'::'",
      "'defstruct'",
      "','",
      "'do'",
      "'end'"
    };
  }

  private static final String[] _LITERAL_NAMES = makeLiteralNames();

  private static String[] makeSymbolicNames() {
    return new String[] {
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      "MINUS",
      "NOT",
      "ABRE_CORCHETE",
      "CIERRA_CORCHETE",
      "ABRE_PARENTESIS",
      "CIERRA_PARENTESIS",
      "VOID",
      "DOT",
      "AS",
      "IF",
      "ELSE",
      "WHILE",
      "PUTS",
      "IN",
      "IGUAL",
      "DEF",
      "MAIN",
      "RETURN",
      "DOS_PUNTOS",
      "DEFSTRUCT",
      "COMMA",
      "DO",
      "END",
      "OMMIT",
      "LINE_COMMENT",
      "MULTI_LINE_COMMENT",
      "INT_CONSTANT",
      "REAL_CONSTANT",
      "CHAR_CONSTANT",
      "ID"
    };
  }

  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated public static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override
  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "java-escape";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public XanaParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ProgramContext extends ParserRuleContext {
    public Program ast;
    public List<Definition> definitions = new ArrayList<>();
    public Var_defContext var_def;
    public Func_defContext func_def;
    public Main_defContext main_def;

    public Main_defContext main_def() {
      return getRuleContext(Main_defContext.class, 0);
    }

    public List<Var_defContext> var_def() {
      return getRuleContexts(Var_defContext.class);
    }

    public Var_defContext var_def(int i) {
      return getRuleContext(Var_defContext.class, i);
    }

    public List<Func_defContext> func_def() {
      return getRuleContexts(Func_defContext.class);
    }

    public Func_defContext func_def(int i) {
      return getRuleContext(Func_defContext.class, i);
    }

    public ProgramContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_program;
    }
  }

  public final ProgramContext program() throws RecognitionException {
    ProgramContext _localctx = new ProgramContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_program);
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      {
        setState(52);
        _errHandler.sync(this);
        _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
        while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            {
              setState(50);
              _errHandler.sync(this);
              switch (_input.LA(1)) {
                case ID:
                  {
                    setState(44);
                    ((ProgramContext) _localctx).var_def = var_def();
                    _localctx.definitions.addAll(((ProgramContext) _localctx).var_def.ast);
                  }
                  break;
                case DEF:
                  {
                    setState(47);
                    ((ProgramContext) _localctx).func_def = func_def();
                    _localctx.definitions.add(((ProgramContext) _localctx).func_def.ast);
                  }
                  break;
                default:
                  throw new NoViableAltException(this);
              }
            }
          }
          setState(54);
          _errHandler.sync(this);
          _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
        }
        setState(55);
        ((ProgramContext) _localctx).main_def = main_def();
        _localctx.definitions.add(((ProgramContext) _localctx).main_def.ast);
        ((ProgramContext) _localctx).ast = new Program(1, 1, _localctx.definitions);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class Main_defContext extends ParserRuleContext {
    public FunctionDefinition ast;
    public Token DEF;
    public Token MAIN;
    public Func_bodyContext func_body;

    public TerminalNode DEF() {
      return getToken(XanaParser.DEF, 0);
    }

    public TerminalNode MAIN() {
      return getToken(XanaParser.MAIN, 0);
    }

    public TerminalNode ABRE_PARENTESIS() {
      return getToken(XanaParser.ABRE_PARENTESIS, 0);
    }

    public TerminalNode CIERRA_PARENTESIS() {
      return getToken(XanaParser.CIERRA_PARENTESIS, 0);
    }

    public Func_bodyContext func_body() {
      return getRuleContext(Func_bodyContext.class, 0);
    }

    public Main_defContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_main_def;
    }
  }

  public final Main_defContext main_def() throws RecognitionException {
    Main_defContext _localctx = new Main_defContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_main_def);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(59);
        ((Main_defContext) _localctx).DEF = match(DEF);
        setState(60);
        ((Main_defContext) _localctx).MAIN = match(MAIN);
        setState(61);
        match(ABRE_PARENTESIS);
        setState(62);
        match(CIERRA_PARENTESIS);
        setState(63);
        ((Main_defContext) _localctx).func_body = func_body();
        ((Main_defContext) _localctx).ast =
            new FunctionDefinition(
                ((Main_defContext) _localctx).DEF.getLine(),
                ((Main_defContext) _localctx).DEF.getCharPositionInLine() + 1,
                (((Main_defContext) _localctx).MAIN != null
                    ? ((Main_defContext) _localctx).MAIN.getText()
                    : null),
                new FunctionType(
                    ((Main_defContext) _localctx).DEF.getLine(),
                    ((Main_defContext) _localctx).DEF.getCharPositionInLine() + 1,
                    new VoidType(
                        ((Main_defContext) _localctx).DEF.getLine(),
                        ((Main_defContext) _localctx).DEF.getCharPositionInLine() + 1)),
                ((Main_defContext) _localctx).func_body.definitions,
                ((Main_defContext) _localctx).func_body.statements);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class Func_defContext extends ParserRuleContext {
    public FunctionDefinition ast;
    public Token DEF;
    public Token ID;
    public Param_listContext param_list;
    public Return_typeContext return_type;
    public Func_bodyContext func_body;

    public TerminalNode DEF() {
      return getToken(XanaParser.DEF, 0);
    }

    public TerminalNode ID() {
      return getToken(XanaParser.ID, 0);
    }

    public TerminalNode ABRE_PARENTESIS() {
      return getToken(XanaParser.ABRE_PARENTESIS, 0);
    }

    public Param_listContext param_list() {
      return getRuleContext(Param_listContext.class, 0);
    }

    public TerminalNode CIERRA_PARENTESIS() {
      return getToken(XanaParser.CIERRA_PARENTESIS, 0);
    }

    public TerminalNode DOS_PUNTOS() {
      return getToken(XanaParser.DOS_PUNTOS, 0);
    }

    public Return_typeContext return_type() {
      return getRuleContext(Return_typeContext.class, 0);
    }

    public Func_bodyContext func_body() {
      return getRuleContext(Func_bodyContext.class, 0);
    }

    public Func_defContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_func_def;
    }
  }

  public final Func_defContext func_def() throws RecognitionException {
    Func_defContext _localctx = new Func_defContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_func_def);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(66);
        ((Func_defContext) _localctx).DEF = match(DEF);
        setState(67);
        ((Func_defContext) _localctx).ID = match(ID);
        setState(68);
        match(ABRE_PARENTESIS);
        setState(69);
        ((Func_defContext) _localctx).param_list = param_list();
        setState(70);
        match(CIERRA_PARENTESIS);
        setState(71);
        match(DOS_PUNTOS);
        setState(72);
        ((Func_defContext) _localctx).return_type = return_type();
        setState(73);
        ((Func_defContext) _localctx).func_body = func_body();
        ((Func_defContext) _localctx).ast =
            new FunctionDefinition(
                ((Func_defContext) _localctx).DEF.getLine(),
                ((Func_defContext) _localctx).DEF.getCharPositionInLine() + 1,
                (((Func_defContext) _localctx).ID != null
                    ? ((Func_defContext) _localctx).ID.getText()
                    : null),
                new FunctionType(
                    ((Func_defContext) _localctx).DEF.getLine(),
                    ((Func_defContext) _localctx).DEF.getCharPositionInLine() + 1,
                    ((Func_defContext) _localctx).param_list.ast,
                    ((Func_defContext) _localctx).return_type.ast),
                ((Func_defContext) _localctx).func_body.definitions,
                ((Func_defContext) _localctx).func_body.statements);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class Func_bodyContext extends ParserRuleContext {
    public List<VarDefinition> definitions = new ArrayList<>();
    public List<Statement> statements = new ArrayList<>();
    public Var_defContext var_def;
    public StatementContext statement;

    public TerminalNode DO() {
      return getToken(XanaParser.DO, 0);
    }

    public TerminalNode END() {
      return getToken(XanaParser.END, 0);
    }

    public List<Var_defContext> var_def() {
      return getRuleContexts(Var_defContext.class);
    }

    public Var_defContext var_def(int i) {
      return getRuleContext(Var_defContext.class, i);
    }

    public List<StatementContext> statement() {
      return getRuleContexts(StatementContext.class);
    }

    public StatementContext statement(int i) {
      return getRuleContext(StatementContext.class, i);
    }

    public Func_bodyContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_func_body;
    }
  }

  public final Func_bodyContext func_body() throws RecognitionException {
    Func_bodyContext _localctx = new Func_bodyContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_func_body);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(76);
        match(DO);
        setState(85);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (((_la) & ~0x3f) == 0 && ((1L << _la) & 65980261924864L) != 0) {
          {
            setState(83);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
              case 1:
                {
                  setState(77);
                  ((Func_bodyContext) _localctx).var_def = var_def();
                  _localctx.definitions.addAll(((Func_bodyContext) _localctx).var_def.ast);
                }
                break;
              case 2:
                {
                  setState(80);
                  ((Func_bodyContext) _localctx).statement = statement();
                  _localctx.statements.addAll(((Func_bodyContext) _localctx).statement.ast);
                }
                break;
            }
          }
          setState(87);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(88);
        match(END);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class Return_typeContext extends ParserRuleContext {
    public CompilerType ast;
    public Simple_typeContext simple_type;
    public Token VOID;

    public Simple_typeContext simple_type() {
      return getRuleContext(Simple_typeContext.class, 0);
    }

    public TerminalNode VOID() {
      return getToken(XanaParser.VOID, 0);
    }

    public Return_typeContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_return_type;
    }
  }

  public final Return_typeContext return_type() throws RecognitionException {
    Return_typeContext _localctx = new Return_typeContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_return_type);
    try {
      setState(95);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case T__0:
        case T__1:
        case T__2:
          enterOuterAlt(_localctx, 1);
          {
            setState(90);
            ((Return_typeContext) _localctx).simple_type = simple_type();
            ((Return_typeContext) _localctx).ast = ((Return_typeContext) _localctx).simple_type.ast;
          }
          break;
        case VOID:
          enterOuterAlt(_localctx, 2);
          {
            setState(93);
            ((Return_typeContext) _localctx).VOID = match(VOID);
            ((Return_typeContext) _localctx).ast =
                new VoidType(
                    ((Return_typeContext) _localctx).VOID.getLine(),
                    ((Return_typeContext) _localctx).VOID.getCharPositionInLine() + 1);
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class Param_listContext extends ParserRuleContext {
    public List<VarDefinition> ast = new ArrayList<>();
    ;
    public Var_defContext v1;
    public Var_defContext v2;

    public List<Var_defContext> var_def() {
      return getRuleContexts(Var_defContext.class);
    }

    public Var_defContext var_def(int i) {
      return getRuleContext(Var_defContext.class, i);
    }

    public List<TerminalNode> COMMA() {
      return getTokens(XanaParser.COMMA);
    }

    public TerminalNode COMMA(int i) {
      return getToken(XanaParser.COMMA, i);
    }

    public Param_listContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_param_list;
    }
  }

  public final Param_listContext param_list() throws RecognitionException {
    Param_listContext _localctx = new Param_listContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_param_list);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(108);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == ID) {
          {
            setState(97);
            ((Param_listContext) _localctx).v1 = var_def();
            _localctx.ast.addAll(((Param_listContext) _localctx).v1.ast);
            setState(105);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la == COMMA) {
              {
                {
                  setState(99);
                  match(COMMA);
                  setState(100);
                  ((Param_listContext) _localctx).v2 = var_def();
                  _localctx.ast.addAll(((Param_listContext) _localctx).v2.ast);
                }
              }
              setState(107);
              _errHandler.sync(this);
              _la = _input.LA(1);
            }
          }
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class Var_defContext extends ParserRuleContext {
    public List<VarDefinition> ast = new ArrayList<VarDefinition>();
    ;
    public Token v1;
    public Token v2;
    public Var_type_defContext var_type_def;

    public TerminalNode DOS_PUNTOS() {
      return getToken(XanaParser.DOS_PUNTOS, 0);
    }

    public Var_type_defContext var_type_def() {
      return getRuleContext(Var_type_defContext.class, 0);
    }

    public List<TerminalNode> ID() {
      return getTokens(XanaParser.ID);
    }

    public TerminalNode ID(int i) {
      return getToken(XanaParser.ID, i);
    }

    public List<TerminalNode> COMMA() {
      return getTokens(XanaParser.COMMA);
    }

    public TerminalNode COMMA(int i) {
      return getToken(XanaParser.COMMA, i);
    }

    public Var_defContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_var_def;
    }
  }

  public final Var_defContext var_def() throws RecognitionException {
    Var_defContext _localctx = new Var_defContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_var_def);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(110);
        ((Var_defContext) _localctx).v1 = match(ID);
        _localctx.ast.add(
            new VarDefinition(
                ((Var_defContext) _localctx).v1.getLine(),
                ((Var_defContext) _localctx).v1.getCharPositionInLine() + 1,
                (((Var_defContext) _localctx).v1 != null
                    ? ((Var_defContext) _localctx).v1.getText()
                    : null)));
        setState(117);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == COMMA) {
          {
            {
              setState(112);
              match(COMMA);
              setState(113);
              ((Var_defContext) _localctx).v2 = match(ID);
              _localctx.ast.add(
                  new VarDefinition(
                      ((Var_defContext) _localctx).v2.getLine(),
                      ((Var_defContext) _localctx).v2.getCharPositionInLine() + 1,
                      (((Var_defContext) _localctx).v2 != null
                          ? ((Var_defContext) _localctx).v2.getText()
                          : null)));
            }
          }
          setState(119);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(120);
        match(DOS_PUNTOS);
        setState(121);
        ((Var_defContext) _localctx).var_type_def = var_type_def();
        for (VarDefinition v : _localctx.ast)
          v.setType(((Var_defContext) _localctx).var_type_def.ast);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class Var_type_defContext extends ParserRuleContext {
    public CompilerType ast;
    public Simple_typeContext simple_type;
    public Array_def_typeContext array_def_type;
    public Struct_def_typeContext struct_def_type;

    public Simple_typeContext simple_type() {
      return getRuleContext(Simple_typeContext.class, 0);
    }

    public Array_def_typeContext array_def_type() {
      return getRuleContext(Array_def_typeContext.class, 0);
    }

    public Struct_def_typeContext struct_def_type() {
      return getRuleContext(Struct_def_typeContext.class, 0);
    }

    public Var_type_defContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_var_type_def;
    }
  }
